# 05_ejemplo-mpi

./: CMakeLists.txt  main.cpp  matrices_mult.cpp  matrices_mult_colectiva.cpp
